<?xml version="1.0"?>
<package>
  <name>ds4_msgs</name>
  <version>0.1.0</version>
  <description>The ds4_msgs package</description>
  <maintainer email="aohsato@gmail.com">Akihito Ohsato</maintainer>
  <license>TODO</license>
  <author email="aohsato@gmail.com">Akihito Ohsato</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
